fix: 🐛 Add style to img tag instile of image-wrap class (#20)
* fix: 🐛 Add style to img tag instile of image-wrap class

* fix: 🐛 Add important to spoiler-image class styles

* fix: 🐛 Add style for reveal-image class

* fix: 🐛 Remove invalid css selector

--- a/wp-template/style.css
+++ b/wp-template/style.css
@@ -2932,6 +2932,11 @@ figure.my-thumbnail .blocks-gallery-grid .blocks-gallery-item figure img[src*=sp
 	border: none;
 }
 
+img.reveal-image
+{
+	border: none !important;
+}
+
 /*------------------  Spoilers ----------------------------------*/
 .spoiler {
   background-color: #fff9ed;
